--- a/index.html
+++ b/index.html
@@ -12,54 +12,65 @@
     <div class="container mt-3">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+              <!-- Header Text -->
                 <h1 class="text-center" id="title">User Details Form</h1>
+                <!-- Description Text -->
                 <p class="text-center" id="description">The purpose of this form is to get the user details and their favourite food</p>
             </div>
-            <div class="col-lg-3 col-xl-3 col-xxl-3"></div>
+        </div>
+        <div class="row d-flex justify-content-center">
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
+              <!-- User Details Form -->
                 <form id="survey-form" class="survey-form">
                     <div class="form-group">
+                      <!-- First Name -->
                       <label for="firstName" id="name-label">First Name:</label>
                       <input type="text" class="form-control" id="first-name" name="firstName" placeholder="Enter your first name" required>
                     </div>
 
                     <div class="form-group">
+                      <!-- Last Name -->
                       <label for="lastName" id="name-label">Last Name:</label>
                       <input type="text" class="form-control" id="last-name" name="lastName" placeholder="Enter your last name" required>
                     </div>
 
                     <div class="form-group">
+                      <!-- Email -->
                         <label for="email" id="email-label">Email:</label>
                         <input type="email" class="form-control" id="email" name="email" placeholder="Enter Your email" required>
                     </div>
 
                     <div class="form-group">
+                      <!-- Address -->
                       <label for="address">Address:</label>
                       <input type="text" class="form-control" id="address" name="address" placeholder="Enter your address" required>
                     </div>
 
                     <div class="form-group">
+                      <!-- Pincode -->
                       <label for="pincode" id="number-label">Pincode:</label>
                       <input type="text" class="form-control" id="pincode" name="pincode" placeholder="Enter your pincode" required>
                     </div>
 
                     <div class="form-group">
+                      <!-- Gnder Options-->
                         <label>Gender:</label><br>
                         <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="radio" name="gender" id="male" value="male">
+                          <input class="form-check-input" type="radio" name="gender" id="male" value="Male">
                           <label class="form-check-label" for="male">Male</label>
                         </div>
                         <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="radio" name="gender" id="female" value="female">
+                          <input class="form-check-input" type="radio" name="gender" id="female" value="Female">
                           <label class="form-check-label" for="female">Female</label>
                         </div>
                         <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="radio" name="gender" id="other" value="other">
+                          <input class="form-check-input" type="radio" name="gender" id="other" value="Other">
                           <label class="form-check-label" for="other">Other</label>
                         </div>
                       </div>
 
                     <div class="form-group">
+                      <!-- Food Choices -->
                       <label>Choice of Food (select at least 2):</label><br>
                       <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="food1" name="food" value="Burger">
@@ -88,29 +99,31 @@
                     </div>
 
                     <div class="form-group">
+                      <!-- Addres: State -->
                       <label for="state">State:</label>
                       <input type="text" class="form-control" id="state" name="state" placeholder="Enter your state" required>
                     </div>
 
                     <div class="form-group">
+                      <!-- Address: Country -->
                       <label for="country">Country:</label>
                       <input type="text" class="form-control" id="country" name="country" placeholder="Enter your country" required>
                     </div>
 
                     <div class="form-group">
+                      <!-- Message Area -->
                         <label for="message">Message:</label>
                         <textarea class="form-control" id="comments" name="message" rows="3" placeholder="Enter your message"></textarea>
                     </div>
-
+                    <!-- Submit Button -->
                     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 d-flex justify-content-center align-items-center">
                         <button type="submit" class="btn btn-primary" id="submit" onclick="addRow()">Submit</button>
                     </div>
                   </form>
             </div>
-            <div class="col-lg-3 col-xl-3 col-xxl-3"></div>
+          </div>
         </div>
-    </div>
-    
+    <!-- Table -->
       <table id="myTable" class="table">
         <thead class="thead-light">
           <tr>
@@ -122,16 +135,19 @@
             <th>Food</th>
             <th>State</th>
             <th>Country</th>
+            <th>Message</th>
           </tr>
         </thead>
         <tbody>
-
+          <!-- Datas will be added dynamically in table body -->
         </tbody>
       </table>    
+
     <!-- Java Script -->
     <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Test Suite -->
     <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
 </body>
 </html>
